--- a/package.json
+++ b/package.json
@@ -59,8 +59,11 @@
   },
   "homepage": "https://github.com/lpezet/etl-js#readme",
   "dependencies": {
+    "google-auth-library": "^6.0.1",
     "jsonpath-plus": "^4.0.0",
     "log4js": "^6.1.2",
+    "open": "^7.0.4",
+    "server-destroy": "^1.0.1",
     "ssh2": "^0.8.4"
   },
   "devDependencies": {
@@ -86,7 +89,7 @@
     "mocha": "^7.1.2",
     "nyc": "^14.1.1",
     "prettier": "^1.19.0",
-    "release-it": "^13.5.8",
+    "release-it": "^13.6.6",
     "rimraf": "^3.0.2",
     "sinon": "^6.3.4",
     "sinon-chai": "^3.2.0",
